# GhostLine-CLI-Optimizer

./: Cargo.toml  README.md  report.json
src/: analyzer.rs  app_debloater.rs  baseline.rs  collector.rs  event.rs  glp.rs  main.rs  optimizer.rs  os_optimizer.rs  recommender.rs  recorder.rs  tui.rs
