[package]
name = "ghostline"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
colored = "3.1.1"
crossterm = "0.29.0"
ctrlc = "3.5.2"
indicatif = "0.18.4"
rand = "0.8.5"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.3", features = ["v4"] }
windows = { version = "0.62.2", features = ["Win32_NetworkManagement_IpHelper", "Win32_Foundation", "Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis"] }
